# ollama-tg-notes

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  docker.env.sample  pyproject.toml
deployment/: Dockerfile  docker-compose.yml
src/: acl.py  date_mapper.py  filters.py  main.py  models.py  utils.py
src/routers/: note_creating.py  note_deleting.py  note_listing.py  note_managing.py
